--- a/Calis/calisfit/templates/common.html
+++ b/Calis/calisfit/templates/common.html
@@ -61,6 +61,7 @@
         {% block content %}
         {% endblock%}
     </div>
+    <script src="{{url_for('static', filename='js/script.js')}}"></script>
 </body>
 
 </html>
