--- a/Calis/calisfit/static/css/styles.css
+++ b/Calis/calisfit/static/css/styles.css
@@ -1,13 +1,28 @@
-#title_header {
-    font-size: 3em;
+#title_header , .navbar-brand{
     font-family: 'Anton';
+    color:rgba(0,0,0,0.95);
+    backdrop-filter: blur(2px);
+    transition: all 400ms ease-in-out;
+}
+
+#title_header:hover{
+    text-shadow: 0px 0px 25px rgba(255,255,255,0.7),
+    4px 10px 10px black;
+    text-decoration: none;
 }
 
 .navbar-brand {
-    font-family: 'Anton';
     font-size: 1.7em;
 }
 
+.nav-link{
+    color:black!important;
+    font-weight: bold;
+}
+
+.navbar-brand:hover{
+    text-shadow: 1px 4px 5px rgba(0,0,0,0.4);
+}
 #register_heading {
     font-size: 3em;
     font-family: 'Anton';
@@ -33,6 +48,12 @@
 	height: 12em;
 }
 
-#para-1{
-
+.bg-landing{
+    min-height: 94vh;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
+
+/* #para-1{} */
