--- a/Calis/calisfit/templates/index.html
+++ b/Calis/calisfit/templates/index.html
@@ -1,6 +1,9 @@
 {% extends "common.html" %}
 {% block content %}
-<div>
-	<h1 class="text-center" id="title_header">CalisCount</h1>
+<div class="bg-landing"
+	style='background-image: url("static/images/lady.jpg");'>
+	<div class="container align-items-center align-items-lg-start  d-flex justify-content-center justify-content-lg-end">
+		<a href="/about" title="Click here to learn more.." class="display-1 my-4" id="title_header">CalisCount</a>
+	</div>
 </div>
-{% endblock %}	
+{% endblock %}
