--- a/Calis/calisfit/templates/login.html
+++ b/Calis/calisfit/templates/login.html
@@ -1,22 +1,26 @@
 {% extends "common.html" %}
 {% block content %}
+<div class="container pt-5">
 	<h2 class='text-center' id="register_heading"> Login </h2>
-	<div class="container-section">
-		<form method="POST" action="">
-			{{ form.hidden_tag() }}
-			<fieldset class="form-group">
-				<legend class="border-bottom mb-4">Exercise Today</legend>
+	<div class="col-12 col-md-8 col-lg-6 mx-auto pt-5">
+		<div class="container-section">
+			<form method="POST" action="" class="font-weight-bold">
+				{{ form.hidden_tag() }}
+				<fieldset class="form-group">
+					<legend class="border-bottom mb-4">Exercise Today</legend>
+					<div class="form-group">
+						{{ form.email.label(class="form-control-label") }}
+						{{ form.email(class="form-control form-control-lg") }}
+					</div>
+					<div class="form-group">
+						{{ form.password.label(class="form-control-label") }}
+						{{ form.password(class="form-control form-control-lg") }}
+					</div>
+				</fieldset>
 				<div class="form-group">
-					{{ form.email.label(class="form-control-label") }}
-					{{ form.email(class="form-control form-control-lg") }}
-				</div>
-				<div class="form-group">
-					{{ form.password.label(class="form-control-label") }}
-					{{ form.password(class="form-control form-control-lg") }}
-				</div>
-			</fieldset>
-			<div class="form-group">
-				{{ form.submit(class="btn btn-outline-info") }}	
-		</form>
-	</div>	
+					{{ form.submit(class="btn btn-outline-info") }}
+			</form>
+		</div>
+	</div>
+</div>
 {% endblock content %}
