--- a/Calis/calisfit/templates/common.html
+++ b/Calis/calisfit/templates/common.html
@@ -28,9 +28,6 @@
                     <a class="nav-link" href="{{ url_for('about') }}">About CalisCount</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('body') }}">My Body</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('learn') }}">Learn</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -47,6 +44,11 @@
                     </div>
                 </li>
             </ul>
+            {% if current_user.is_authenticated %}
+                <div class="ml-auto nav-item">
+                    <a class="nav-link" href="{{ url_for('body') }}">My Body</a>
+                </div>
+            {% endif %}
         </div>
     </nav>
     <div>
