Add Track Record and Profile link in Navbar

--- a/Calis/calisfit/templates/common.html
+++ b/Calis/calisfit/templates/common.html
@@ -45,8 +45,14 @@
                 </li>
             </ul>
             {% if current_user.is_authenticated %}
-                <div class="ml-auto nav-item">
+            <div class="ml-auto nav-item">
+                <a class="nav-link" href="/track">Track Record</a>
+            </div>
+                <div class="nav-item">
                     <a class="nav-link" href="{{ url_for('body') }}">My Body</a>
+                </div>
+                <div class="nav-item">
+                    <a class="nav-link" href="/profile">Profile</a>
                 </div>
             {% endif %}
         </div>
