--- a/Calis/calisfit/templates/body.html
+++ b/Calis/calisfit/templates/body.html
@@ -1,4 +1,90 @@
 {% extends "common.html" %}
 {% block content %}
+<div class="container pt-5">
+    <h2 class='text-center' id="register_heading"> My Body </h2>
+    <div class="col-12 col-md-8 col-lg-6 mx-auto pt-5">
+        <div class="container-section">
+            <form method="POST" action="" class='font-weight-bold'>
+                {{ form.hidden_tag() }}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">Calculate Your BMR and Protein</legend>
+                    <div class="form-group">
+                        {{ form.height.label(class="form-control-label") }}
 
+                        {% if form.height.errors %}
+                        {{ form.height(class="form-control form-control-lg ") }}
+                        <div class="invalid-feedback d-block">
+                            {% for error in form.height.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        {{ form.height(class="form-control form-control-lg")}}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.age.label(class="form-control-label") }}
+
+                        {% if form.age.errors %}
+                        {{ form.age(class="form-control form-control-lg") }}
+                        <div class="invalid-feedback d-block">
+                            {% for error in form.age.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        {{ form.age(class="form-control form-control-lg")}}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.weight.label(class="form-control-label") }}
+
+                        {% if form.weight.errors %}
+                        {{ form.weight(class="form-control form-control-lg") }}
+                        <div class="invalid-feedback d-block">
+                            {% for error in form.weight.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        {{ form.weight(class="form-control form-control-lg")}}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.gender.label(class="form-control-label") }}
+
+                        {% if form.gender.errors %}
+                        {{ form.gender(class="custom-select form-control form-control-lg") }}
+                        <div class="invalid-feedback d-block">
+                            {% for error in form.gender.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        {{ form.gender(class="form-control custom-select form-control-lg")}}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.activity_level.label(class="form-control-label") }}
+
+                        {% if form.activity_level.errors %}
+                        {{ form.activity_level(class="custom-select form-control form-control-lg") }}
+                        <div class="invalid-feedback d-block">
+                            {% for error in form.activity_level.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        {{ form.activity_level(class="form-control custom-select form-control-lg")}}
+                        {% endif %}
+                    </div>
+                </fieldset>
+                <div class="form-group text-right">
+                    {{ form.submit(class="btn btn-outline-info") }}
+                </div>
+                    
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock content %}
