Add Cred Class for BMR and Calories
Add:
+ Storing Cred in DB after calculating stuff

Update:
+ forms, User Class

Fix:
+ Validation Error in registrater template

--- a/Calis/calisfit/templates/register.html
+++ b/Calis/calisfit/templates/register.html
@@ -12,7 +12,7 @@
                         {{ form.username.label(class="form-control-label") }}
 
                         {% if form.username.errors %}
-                        {{ form.username(class="form-control form-control-lg is-valid") }}
+                        {{ form.username(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback d-block">
                             {% for error in form.username.errors %}
                             <li>{{ error }}</li>
@@ -26,7 +26,7 @@
                         {{ form.email.label(class="form-control-label") }}
 
                         {% if form.email.errors %}
-                        {{ form.email(class="form-control form-control-lg is-valid") }}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback d-block">
                             {% for error in form.email.errors %}
                             <li>{{ error }}</li>
@@ -37,10 +37,24 @@
                         {% endif %}
                     </div>
                     <div class="form-group">
+                        {{ form.gender.label(class="form-control-label") }}
+
+                        {% if form.gender.errors %}
+                        {{ form.gender(class="custom-select form-control form-control-lg") }}
+                        <div class="invalid-feedback d-block">
+                            {% for error in form.gender.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        {{ form.gender(class="form-control custom-select form-control-lg")}}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
                         {{ form.password.label(class="form-control-label") }}
 
                         {% if form.password.errors %}
-                        {{ form.password(class="form-control form-control-lg is-valid") }}
+                        {{ form.password(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback d-block">
                             {% for error in form.password.errors %}
                             <li>{{ error }}</li>
@@ -54,7 +68,7 @@
                         {{ form.confirm_password.label(class="form-control-label") }}
 
                         {% if form.confirm_password.errors %}
-                        {{ form.confirm_password(class="form-control form-control-lg is-valid") }}
+                        {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback d-block">
                             {% for error in form.confirm_password.errors %}
                             <li>{{ error }}</li>
