--- a/Calis/calisfit/templates/body.html
+++ b/Calis/calisfit/templates/body.html
@@ -51,31 +51,17 @@
                         {% endif %}
                     </div>
                     <div class="form-group">
-                        {{ form.gender.label(class="form-control-label") }}
+                        {{ form.activity.label(class="form-control-label") }}
 
-                        {% if form.gender.errors %}
-                        {{ form.gender(class="custom-select form-control form-control-lg") }}
+                        {% if form.activity.errors %}
+                        {{ form.activity(class="custom-select form-control form-control-lg") }}
                         <div class="invalid-feedback d-block">
-                            {% for error in form.gender.errors %}
+                            {% for error in form.activity.errors %}
                             <li>{{ error }}</li>
                             {% endfor %}
                         </div>
                         {% else %}
-                        {{ form.gender(class="form-control custom-select form-control-lg")}}
-                        {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.activity_level.label(class="form-control-label") }}
-
-                        {% if form.activity_level.errors %}
-                        {{ form.activity_level(class="custom-select form-control form-control-lg") }}
-                        <div class="invalid-feedback d-block">
-                            {% for error in form.activity_level.errors %}
-                            <li>{{ error }}</li>
-                            {% endfor %}
-                        </div>
-                        {% else %}
-                        {{ form.activity_level(class="form-control custom-select form-control-lg")}}
+                        {{ form.activity(class="form-control custom-select form-control-lg")}}
                         {% endif %}
                     </div>
                 </fieldset>
