Add Histogram for Track Data
Bug: Invalid Graph

--- a/Calis/calisfit/templates/track.html
+++ b/Calis/calisfit/templates/track.html
@@ -1,1 +1,11 @@
 {% extends "common.html" %}
+
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-lg-7 mx-auto">
+            <img class="img-fluid" src="/static/graphs/{{path}}" alt="Graph">
+        </div>
+    </div>
+</div>
+{% endblock %}
