--- a/Calis/calisfit/templates/body.html
+++ b/Calis/calisfit/templates/body.html
@@ -64,6 +64,20 @@
                         {{ form.activity(class="form-control custom-select form-control-lg")}}
                         {% endif %}
                     </div>
+                    <div class="form-group">
+                        {{ form.selectp.label(class="form-control-label") }}
+
+                        {% if form.selectp.errors %}
+                        {{ form.selectp(class="custom-select form-control form-control-lg") }}
+                        <div class="invalid-feedback d-block">
+                            {% for error in form.selectp.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        {{ form.selectp(class="form-control custom-select form-control-lg")}}
+                        {% endif %}
+                    </div>
                 </fieldset>
                 <div class="form-group text-right">
                     {{ form.submit(class="btn btn-outline-info") }}
