--- a/Calis/calisfit/templates/index.html
+++ b/Calis/calisfit/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "common.html" %}
 {% block content %}
 <div class="bg-landing"
-	style='background-image: url("static/images/lady.jpg");'>
-	<div class="container align-items-center align-items-lg-start  d-flex justify-content-center justify-content-lg-end">
+	style='background-image: url("static/images/bg.jpg");'>
+	<div class="container align-items-center align-items-lg-start  d-flex justify-content-lg-start pt-5">
 		<a href="/about" title="Click here to learn more.." class="display-1 my-4" id="title_header">CalisCount</a>
 	</div>
 </div>
