Add: Protein in Graph

--- a/Calis/calisfit/templates/track.html
+++ b/Calis/calisfit/templates/track.html
@@ -77,7 +77,11 @@
             ]
         }, {
             name: 'Proteins',
-            data: []
+            data: [
+            {% for i in data[2]%}
+            {{i}},
+            {% endfor %}
+            ]
         }],
     
         responsive: {
