--- a/Calis/calisfit/templates/about.html
+++ b/Calis/calisfit/templates/about.html
@@ -1,24 +1,42 @@
 {% extends "common.html" %}
 {% block content %}
-<div class="col">
-    <div class="row-lg-6">
-        <div class="bg-custom" id="para-1">
-            <div class="pt-5">
-                <h3 class="about_" align="right">ABOUT CALISCOUNT</h3>
-                <p align="right">
-                    Caliscount is an online platform developed to create awareness about body weight training known as Calisthenics. Calisthenics is a form of exercise consisting of a variety of movements which exercise large muscle groups (gross motor movements), such as running, standing, grasping, pushing, etc. These exercises are often performed rhythmically and with minimal equipment, as bodyweight exercises. They are intended to increase strength, fitness and flexibility, through movements such as pulling, pushing, bending, jumping, or swinging, using one's bodyweight for resistance.
-                </p>
+<div class="bg-custom">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="mt-5" id="para-1">
+                    <div class="p-5 text-white">
+                        <h3 class="about_" align="right">ABOUT CALISCOUNT</h3>
+                        <p align="right">
+                            Caliscount is an online platform developed to create awareness about body weight training
+                            known
+                            as Calisthenics. Calisthenics is a form of exercise consisting of a variety of movements
+                            which
+                            exercise large muscle groups (gross motor movements), such as running, standing, grasping,
+                            pushing, etc. These exercises are often performed rhythmically and with minimal equipment,
+                            as
+                            bodyweight exercises. They are intended to increase strength, fitness and flexibility,
+                            through
+                            movements such as pulling, pushing, bending, jumping, or swinging, using one's bodyweight
+                            for
+                            resistance.
+                        </p>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="row-lg-6">
-        <div class="bg-custom" id="para-2">
-            <div class="pt-5">
-                <h3 class="about_" align="left">BENEFITS</h3>
-                <p align="left">
-                    Instead of spending so much money on Gyms and Trainers we can use this platform for Learning more about this form of training which only requires your Will,Determination and Enthusiasm.
-                    Users can learn about various exercises from our Learn Section and begin working out after calculating your <b>BASIC METABOLIC RATE , PROTEIN REQUIRED , CALORIES COUNT , CALORIES BURNT</b> from My Body Section of our Website.
-                </p>
+            <div class="col-12">
+                <div class="mt-5" id="para-2">
+                    <div class="p-5 text-white">
+                        <h3 class="about_" align="left">BENEFITS</h3>
+                        <p align="left">
+                            Instead of spending so much money on Gyms and Trainers we can use this platform for Learning
+                            more about this form of training which only requires your Will,Determination and Enthusiasm.
+                            Users can learn about various exercises from our Learn Section and begin working out after
+                            calculating your <b>BASIC METABOLIC RATE , PROTEIN REQUIRED , CALORIES COUNT , CALORIES
+                                BURNT</b> from My Body Section of our Website.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
