--- a/Calis/calisfit/templates/login.html
+++ b/Calis/calisfit/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "common.html" %}
 {% block content %}
 <div class="container pt-5">
+	{{super()}}
 	<h2 class='text-center' id="register_heading"> Login </h2>
 	<div class="col-12 col-md-8 col-lg-6 mx-auto pt-5">
 		<div class="container-section">
