--- a/Calis/calisfit/templates/profile.html
+++ b/Calis/calisfit/templates/profile.html
@@ -1,6 +1,7 @@
 {% extends "common.html" %}
 {% block content %}
 	<div class="content-section">
+        {{super()}}
 		<div class="media container py-5">
 			<img class="rounded-circle account-img" src="{{ image_file }}">
 			<div class="media-body mt-3">
