--- a/Calis/calisfit/templates/track.html
+++ b/Calis/calisfit/templates/track.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div class="container">
+    {{super()}}
     <div class="row">
         <div class="col-12 col-lg-8 mx-auto">
             {% if data %}
