--- a/Calis/calisfit/templates/common.html
+++ b/Calis/calisfit/templates/common.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a class="navbar-brand" href="/">CALISCOUNT</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-nav sticky-top">
+        <a class="navbar-brand mr-0" href="/">CALISCOUNT</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -63,6 +63,7 @@
         </div>
     </nav>
     <div>
+        {% block content %}
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
@@ -72,7 +73,6 @@
               {% endfor %}
             {% endif %}
         {% endwith %}
-        {% block content %}
         {% endblock%}
     </div>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
