--- a/Calis/calisfit/templates/index.html
+++ b/Calis/calisfit/templates/index.html
@@ -1,9 +1,12 @@
 {% extends "common.html" %}
 {% block content %}
-<div class="bg-landing"
-	style='background-image: url("static/images/bg.jpg");'>
+<div class="bg-landing" style='background-image: url("static/images/bg.jpg");'>
+	{{super()}}
 	<div class="container align-items-center align-items-lg-start  d-flex justify-content-lg-start pt-5">
 		<a href="/about" title="Click here to learn more.." class="display-1 my-4" id="title_header">CalisCount</a>
+	</div>
+	<div class="container">
+		<h4><a class="text-dark" href='/body'>CALCULATE YOUR <br><span class="font-weight-bold">BMR | CALORY | PROTEIN</span><br>INTAKE</a></h4>
 	</div>
 </div>
 {% endblock %}
