--- a/Calis/calisfit/templates/common.html
+++ b/Calis/calisfit/templates/common.html
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-nav sticky-top">
-        <a class="navbar-brand mr-0" href="/">CALISCOUNT</a>
+        <a class="navbar-brand mr-0" href="/">CalisCount</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
